[package]
name = "rs-protov2d"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"

[dependencies]
futures-util = "0.3.31"
tokio = { version = "1.41.1", features = ["net", "rt", "macros"] }
tokio-tungstenite = "0.24.0"
pqc_kyber = { version = "0.7.1", features = ["std", "kyber1024", "zeroize"] }
crystals-dilithium = "1.0.0"
rmp-serde = "1.3.0"
sha2 = "0.10.8"
hex = "0.4.3"
ed25519-dalek = "2.1.1"
x25519-dalek = "2.0.1"
rand = "0.8.5"
aes-gcm = "0.10.3"
rustls = { version = "0.23.19", optional = true }

[features]
default = ["tls-rustls-webpki"]
tls-nativetls = ["tokio-tungstenite/native-tls"]
tls-rustls-native = ["tokio-tungstenite/rustls-tls-native-roots", "rustls"]
tls-rustls-webpki = ["tokio-tungstenite/rustls-tls-webpki-roots", "rustls"]
